trunk/Archive/f4e9133f1c8f42abb6bdd4518e8c14a3-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:20:38: error: non-template 'rebind' used as template
   typedef typename TAllocatorTraits::rebind< TMetaPair > TAllocatorRebind;
                                      ^
main.cpp:20:38: note: use 'Dictionary<TK, TV, TH, TKEq, TAlloc>::TAllocatorTraits::template rebind' to indicate that it is a template
main.cpp:20:38: error: declaration does not declare anything [-fpermissive]
main.cpp:21:20: error: 'TAllocatorRebind' has not been declared
   typedef typename TAllocatorRebind::other TMetaAllocator;
                    ^
main.cpp:23:2: error: expected ';' after class definition
  }
  ^
main.cpp: In function 'int main()':
main.cpp:26:26: warning: unused variable 'arf' [-Wunused-variable]
     Dictionary<int, int> arf;
                          ^
